# mapiproxy

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: create-binaries.yml
examples/: x.rs
src/: addr.rs  colors.rs  event.rs  headtail.rs  main.rs  render.rs  usage.txt
src/mapi/: abbreviate.rs  analyzer.rs  mod.rs
src/pcap/: mod.rs  mybufread.rs  tcp.rs  tracker.rs
src/proxy/: event.rs  forward.rs  mod.rs  network.rs
testdata/: capture4.pcap  frag.conf  shuffled.pcap
