# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mapiproxy"
version = "0.6.3"
description = "A proxy for debugging MonetDB's wire protocol"
authors = [ "Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>" ]
keywords = [ "monetdb", "mapi", "proxy" ]
categories = [ "command-line-utilities", "database" ]
license = "MPL-2.0"

# for now
readme = "README.md"
homepage = "https://github.com/MonetDBSolutions/mapiproxy"
repository = "https://github.com/MonetDBSolutions/mapiproxy"

edition = "2021"
default-run = "mapiproxy"

[features]
# Enables Out-Of-Band (Urgent) message handling.
# build.rs automatically enables this on Linux.
oob = []

[dependencies]
anyhow = "1.0.86"
argsplitter = "0.5.0"
chrono = "0.4.38"
ctrlc = "3.4.4"
etherparse = "0.15.0"
is-terminal = "0.4.12"
itertools = "0.13.0"
lazy-regex = "3.1.0"
mio = { version = "1.0.0", features = [ "net", "os-ext", "os-poll" ] }
pcap-file = "2.0.0"
slab = "0.4.9"
smallvec = { version = "1.13.2", features = [ "union" ] }
socket2 = "0.5.7"
thiserror = "1.0.61"

[dev-dependencies]
diff = "0.1.13"
semver = "1.0.23"

