# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mapiproxy"
version = "0.6.4-alpha.1"
description = "A proxy for debugging MonetDB's wire protocol"
authors = [ "Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>" ]
keywords = [ "monetdb", "mapi", "proxy" ]
categories = [ "command-line-utilities", "database" ]
license = "MPL-2.0"

# for now
readme = "README.md"
homepage = "https://github.com/MonetDBSolutions/mapiproxy"
repository = "https://github.com/MonetDBSolutions/mapiproxy"

edition = "2021"
default-run = "mapiproxy"

[features]
# Enables Out-Of-Band (Urgent) message handling.
# build.rs automatically enables this on Linux.
oob = []

[dependencies]
anyhow = "1.0.95"
argsplitter = "0.5.0"
bstr = "1.12.0"
chrono = "0.4.39"
claim = "0.5.0"
ctrlc = "3.4.5"
etherparse = "0.18.0"
is-terminal = "0.4.13"
itertools = "0.14.0"
lazy-regex = "3.4.1"
memchr = "2.7.5"
mio = { version = "1.0.3", features = [ "net", "os-ext", "os-poll" ] }
pcap-file = "2.0.0"
slab = "0.4.9"
smallvec = { version = "1.13.2", features = [ "union" ] }
socket2 = "0.5.8"
thiserror = "2.0.11"

[dev-dependencies]
diff = "0.1.13"
semver = "1.0.24"

